--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.20.0",
     "lodash": "^4.17.20",
     "react": "16.13.1",
-    "react-native": "0.63.3"
+    "react-native": "0.63.3",
+    "react-native-scrolling-button-menu": "0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
